--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <div class="terminos">
                 <p>
-                    SOLO MINUSCULAS Y SIN ACENTO POR FAVOR
+                    SOLO MINUSCULAS Y SIN ACENTO POR FAVOR.
                 </p>
             </div>
             <div class="botones">
