V2-Estructura CSS/Responsive

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador - KEVIN MUÑOZ</title>
     <!-- CSS only -->
-    <link rel="stylesheet" href=Estilos/reset.css />
-    <link rel="stylesheet" href=Estilos/styles.css />
+    <link rel="stylesheet" href="Estilos/reset.css">
+    <link rel="stylesheet" href="Estilos/styles.css">
 </head>
 
 <body>
     <div class="container">
+        <div class="logo">
+            <img src="img/LogoAlura.png" alt="LogoAlura">
+        </div>
         <div class="encriptar">
             <textarea name="texto" class="texto" id="texto" cols="30" rows="10"
                 placeholder="Ingresa el texto aqui (solo minusculas y sin acentos)"></textarea>
@@ -27,11 +30,11 @@
             </div>
         </div>
         <div class="encriptado">
-            <img src="" alt="" id="imagen_caricatura">
+            <img src="img/PersonaAlura.png" alt="Busqueda de texto" id="imagen_caricatura">
             <div class="mensaje_encriptado" id="mensaje_encriptado">
                 <h2 id="titulo_mensaje">NINGUN MENSAJE ENCONTRADO PARA ESTA TAREA</h2>
                 <p id="parrafo"> Ingrea el texto para la tarea que necesitas (Encriptar o Desencriptrar)</p>
-                <textarea name="mensaje" id="mensaje" cols="30" rows="10" class="mensaje"></textarea>
+                <!-- <textarea name="mensaje" id="mensaje" cols="30" rows="10" class="mensaje"></textarea> -->
             </div>
         </div>
     </div>
