--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Encriptador - KEVIN MUÑOZ</title>
-    <!-- CSS only -->
+    <!-- CSS -->
     <link rel="stylesheet" href="Estilos/reset.css">
     <link rel="stylesheet" href="Estilos/styles.css">
 </head>
@@ -25,8 +25,10 @@
                 </p>
             </div>
             <div class="botones">
-                <button class="btn-Encriptar" type="button" onclick="encriptrar()">ENCRIPTAR TEXTO</button>
-                <button class="btn-Desencriptar" type="button" onclick="desencriptrar()">DESENCRIPTAR TEXTO</button>
+                <button class="btn-Encriptar" type="button" onclick="encriptar()">ENCRIPTAR TEXTO</button>
+                <button class="btn-Desencriptar" type="button" onclick="desencriptar()">DESENCRIPTAR TEXTO</button>
+                <button class="btn-Copiar" type="button" onclick="copiarTexto()">COPIAR TEXTO</button>
+
             </div>
         </div>
         <div class="encriptado">
@@ -34,11 +36,20 @@
             <div class="mensaje_encriptado" id="mensaje_encriptado">
                 <h2 id="titulo_mensaje">NINGUN MENSAJE ENCONTRADO PARA ESTA TAREA</h2>
                 <p id="parrafo"> Ingrea el texto para la tarea que necesitas (Encriptar o Desencriptrar)</p>
-                <!-- <textarea name="mensaje" id="mensaje" cols="30" rows="10" class="mensaje"></textarea> -->
+            </div>
+            <div class="texto_encriptado">
+                <textarea name="textoEncriptado" class="textoEncriptado" id="textoEncriptado" cols="30"
+                    rows="10"></textarea>
             </div>
         </div>
     </div>
 </body>
-<script src="script.js"></script>
+
+<footer>
+    <p>© 2024 Kevin Muñoz. Todos los derechos reservados.</p>
+    <p>Contacto: ramirezkevin350@gmail.com</p>
+</footer>
+
+<script src="index.js"></script>
 
 </html>
