--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </body>
 
 <footer>
-    <p>© 2024 Kevin Muñoz. Todos los derechos reservados.</p>
+    <p>© 2024 Kevin Muñoz. </p>
     <p>Contacto: ramirezkevin350@gmail.com</p>
 </footer>
 
