V4 Cambios en JS finales

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <p id="parrafo"> Ingrea el texto para la tarea que necesitas (Encriptar o Desencriptrar)</p>
             </div>
             <div class="texto_encriptado">
-                <textarea name="textoEncriptado" class="textoEncriptado" id="textoEncriptado" cols="30"
-                    rows="10"></textarea>
+                <textarea name="textoEncriptado" class="textoEncriptado" id="textoEncriptado" cols="30" rows="10"
+                    readonly></textarea>
             </div>
         </div>
     </div>
